*                  V E R S I O N   I N F O R M A T I O N                      *
*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

=======

1.9.15 (2013-10-??)
 + Selection around GPX track: preview map selection while selecting distance   

1.9.14 (2013-07-29)
 ~ Custom SQlite map sources can now be specified using a relative path
 ~ BackCountry Navigator format updated - now SQLite based atlases are created
 + Japanese translation added (thanks to "u/ta-ka") [patch #33]
 ! Not translated tooltip corrected [patch #34]
 ! A problem with MapSourceInitializationException fixed (#245)
 ! Memory leak fixed in "TwoNav (RMAP)" atlas format causing an 
    OutOfMemoryError when creating a large atlas
 
1.9.13 (2013-05-29)
 ! HTML injection via Atlas name bug #242
 ! Workaround for Java bug in JPEG writer (if source image has alpha 
    transparency) implemented
 + French translation added (thanks to Jean-Claude Repetto) [patch #31]

1.9.12 (2013-04-17)
 ! Mapsource OpenStreetMap Maps4u.eu updated
 ~ Reduced the number of decimal places of coordinates in GPX files created by 
    MOBAC to 5 places (#242)
 + Custom multi-layer map sources: Each layer can now have an alpha 
    transparency value, specified as space separated list in <layersAlpha>
    element
 ! Bufix of conversion between different coordinate formats (degree, deg/min, 
    deg/min/sec)
 ~ localImageFile support using <retinaDisplay> (patch by miocool)
 ~ More atlas format support retina (scale = 2) images, including Paper(PNG), 
    Paper(pdf). (patch by miocool) 
 ! More atlas format can display retina (scale = 2) images correctly 
    (convert to scale = 1), such as iPhone v5 (patch by miocool)  
 + Add <localImageFile> map source support (patch by miocool)